Update to AGP 7.0.0